<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clipToPadding="false"
    android:layout_height="match_parent"
    tools:context=".presentation.checkout.CheckoutActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_primary"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:title="Checkout"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:titleTextColor="@color/white" />

    <include
        android:id="@+id/layout_state"
        layout="@layout/common_layout_content_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_checkout_controller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/cv_order_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/checkout_list_item" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_title_delivery_method"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/title_method_payment" />

            <RadioGroup
                android:id="@+id/rg_delivery_method"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/app_color_primary"
                android:checkedButton="@+id/rb_delivery"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_pick_up"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/app_color_primary"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/txt_pick_up"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rb_delivery"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/txt_delivery"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_title_payment_method"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="Method Payment" />

            <RadioGroup
                android:id="@+id/rg_payment_method"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/app_color_primary"
                android:checkedButton="@+id/rb_e_wallet"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_cash"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/app_color_primary"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/txt_cash"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rb_e_wallet"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/txt_transfer"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_title_shopping_summary"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="Payment Summary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:weightSum="2">

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/total_pembayaran_text"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_total_pembayaran_checkout" />

                <TextView
                    android:id="@+id/total_pembayaran"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    tools:text="Rp 20000" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_order_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/app_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="8dp">

        <Button
            android:id="@+id/btn_order"
            android:fontFamily="@font/poppins_bold"
            android:textSize="26sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="Order" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>