<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailFragment">

    <ImageView
        android:id="@+id/iv_food_detail_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/iv_back_detail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_food_detail_img">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_food_name_detail"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:textAlignment="textStart"
                tools:text="@string/tv_detail_food" />

            <TextView
                android:id="@+id/tv_food_price"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:textAlignment="textEnd"
                tools:text="Rp. 42000" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_food_description"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            tools:text="Ayam goreng tepung adalah hidangan yang dibuat dari potongan daging ayam yang telah dilapisi dengan tepung" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_food_shop_distance"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />


        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/v_food_desc"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/app_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_category_name" />

    <LinearLayout
        android:id="@+id/ll_shop_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_food_desc">

        <ImageView
            android:id="@+id/iv_shop_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_location" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/tv_shop_location" />

            <TextView
                android:id="@+id/tv_shop_location"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Jl. Antara No.23, Klp. Tiga, Kec. Tj. Karang Pusat, Kota Bandar Lampung, Lampung 35118" />

        </LinearLayout>

    </LinearLayout>


    <View
        android:id="@+id/v_add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/app_color_primary"
        app:layout_constraintBottom_toTopOf="@id/ll_add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_minus_button"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_button_minus" />

            <TextView
                android:id="@+id/tv_food_total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/tv_food_total" />

            <ImageView
                android:id="@+id/iv_plus_button"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_button_plus" />


        </LinearLayout>

        <Button
            android:id="@+id/button_add_to_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="26dp"
            android:background="@color/app_color_primary"
            android:backgroundTint="@color/app_color_tertiary"
            android:text="@string/tv_add_to_chart" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>