<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:clickable="true"
    android:focusable="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/app_color_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <ImageView
                android:id="@+id/iv_cart_menu"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_food_cart_name"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/poppins_bold"
                android:textAlignment="textStart"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_cart_menu"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="mie ayam pedas manis" />

            <ImageView
                android:id="@+id/ic_delete_cart"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_food_cart_price"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="110dp"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/poppins_light"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/iv_cart_menu"
                app:layout_constraintTop_toBottomOf="@+id/tv_food_cart_name"
                tools:text="@string/tv_price_food_1" />

            <LinearLayout
                android:id="@+id/ll_count_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_food_cart_price">

                <ImageView
                    android:id="@+id/iv_minus_cart"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_button_minus" />

                <TextView
                    android:id="@+id/tv_cart_total"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/tv_food_total"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_plus_cart"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_button_plus" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_card_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:alpha="0.5"
                android:autofillHints=""
                android:ems="18"
                android:textColor="@color/black"
                android:inputType="text"
                android:text="@string/et_note_cart"
                tools:text="Sambal di pisah ya...."
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_cart_menu"
                app:layout_constraintTop_toBottomOf="@+id/ll_count_food" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>